# MNIST-LibTorch

./: .gitignore  CMakeLists.txt  README.md
data/: download.sh
include/: model.h  utils.h
src/: classifier.cpp  detect.cpp  evaluate.cpp  test.cpp  train.cpp  utils.cpp
